2005-06-06  Maciej Stachowiak  <mjs@apple.com>

        - more SPI removal, for font cache and CFStream

        * WebCoreSupport.subproj/WebTextRendererFactory.m:
        (getLCDScaleParameters):
        (+[WebTextRendererFactory createSharedFactory]):
        * WebView.subproj/WebFormDataStream.m:
        (formCanRead):
        (formEventCallback):
        (webSetHTTPBody):

2005-06-06  Maciej Stachowiak  <mjs@apple.com>

        - remove use of AX SPI

        * WebCoreSupport.subproj/WebViewFactory.m:
        (-[WebViewFactory objectIsTextMarker:]):
        (-[WebViewFactory objectIsTextMarkerRange:]):
        (-[WebViewFactory textMarkerWithBytes:length:]):
        (-[WebViewFactory getBytes:fromTextMarker:length:]):
        (-[WebViewFactory textMarkerRangeWithStart:end:]):
        (-[WebViewFactory startOfTextMarkerRange:]):
        (-[WebViewFactory endOfTextMarkerRange:]):
        (-[WebViewFactory accessibilityHandleFocusChanged]):
        (-[WebViewFactory AXUIElementForElement:]):
        (-[WebViewFactory unregisterUniqueIdForUIElement:]):

2005-06-06  Maciej Stachowiak  <mjs@apple.com>

        - removed more SPI

        * Carbon.subproj/CarbonUtils.m:
        (WebInitForCarbon):
        (PoolCleaner):
        * WebView.subproj/WebHTMLView.m:
        (+[WebHTMLView _postFlagsChangedEvent:]):
        (-[WebHTMLView _autoscroll]):
        (-[WebHTMLView addMouseMovedObserver]):
        (-[WebHTMLView removeMouseMovedObserver]):
        (-[WebHTMLView layoutToMinimumPageWidth:maximumPageWidth:adjustingViewSize:]):
        (-[WebHTMLView _interceptEditingKeyEvent:]):

2005-06-06  Maciej Stachowiak  <mjs@apple.com>

        - more SPI use removal

        * Misc.subproj/WebDownload.h:
        * Misc.subproj/WebNSURLExtras.m:
        (-[NSURL _webkit_canonicalize]):
        * WebView.subproj/WebMainResourceClient.h:
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient initWithDataSource:]):